--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.7",
+        "jeroennoten/laravel-adminlte": "^3.8",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "*",
         "yajra/laravel-datatables": "^1.0",
         "yajra/laravel-datatables-buttons": "*",
+        "yajra/laravel-datatables-editor": "^1.25",
         "yajra/laravel-datatables-html": "*",
         "yajra/laravel-datatables-oracle": "*"
     },
