--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "admin-lte": "^3.0",
-        "datatables.net-bs4": "^1.13.1",
-        "datatables.net-buttons-bs4": "^2.3.3",
-        "datatables.net-searchpanes-bs4": "^2.1.0",
-        "datatables.net-select-bs4": "^1.5.0",
-        "yarn": "^1.22.19"
+        "admin-lte": "^3.2.0",
+        "datatables.net-bs5": "^1.13.1",
+        "datatables.net-buttons-bs5": "^2.3.3",
+        "datatables.net-editor-bs5": "^2.0.3",
+        "datatables.net-searchbuilder-bs5": "^1.4.0",
+        "datatables.net-searchpanes-bs5": "^2.1.0",
+        "datatables.net-staterestore-bs5": "^1.2.0",
+        "jquery": "^3.6.2"
     }
 }
